--- a/public/index.html
+++ b/public/index.html
@@ -1,1 +1,11 @@
-<!DOCTYPE html><html><head><title>Study Buddy</title></head><body><div id='root'></div></body></html>
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <title>Study Buddy Social</title>
+  </head>
+  <body>
+    <div id="root"></div>
+    <script type="module" src="/src/main.jsx"></script>
+  </body>
+</html>
